edited meta title

--- a/html/meta.html
+++ b/html/meta.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>META: Daily Horoscopes</title>
+    <title>META: Today's Horoscope</title>
     <link rel="stylesheet" href="../includes/main.css">
     <link rel="icon" type="image/png" href="../images/kermit_crop.png">
 
