--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h3><a href = "html/cat.html">✧ Cat Got Your Tongue?</a></h3>
           <h3><a href = "html/sleep.html">★ Sleep on the Floor</a></h3>
           <h3><a href = "html/walk.html">✧ Take a Walk</a></h3>
-          <h3><a href = "html/meta.html">META: Daily Horoscopes</a></h3>
+          <h3><a href = "html/meta.html">META: Today's Horoscope</a></h3>
          <!-- <h3><a href="#top"><b>BACK TO TOP</b></a></h3> -->
         </div>
     </div>
