--- a/html/sleep.html
+++ b/html/sleep.html
@@ -51,7 +51,8 @@
             <p>.- . - . - .- . - Valley Fold </p>
             <p>Complete all folds accurately before forming this shape:</p>
           <img class="title-image" src="../images/instruct.jpg" alt="Instructions for folding">
-          <p>(A print-friendly image is included in the pdf version of this puzzle)</p>
+          <p><a href="https://drive.google.com/file/d/1gbWdacNlXey_0mpP6MhL3Y3qTTpDc5aZ/view?usp=sharing" target="_blank">
+            (A print-friendly image is included in the pdf version of this puzzle))</a></p>
         </div>
         <h2><a href="../index.html"><b>BACK TO HOME</b></a></h2>
     <p id="secret-message" onclick="tellSecret()">click on me!</p>
