updated cat got your tongue

--- a/html/cat.html
+++ b/html/cat.html
@@ -44,7 +44,7 @@
           <div class="flavor-text">
             <p>...and if you're still speechless, maybe the right react could help you out.</p> 
             <p>But what does it even mean??</p></div>
-          <img class="title-image" src="../images/cat.png" alt=" i n t e r e s t i n g emojis">
+          <img class="title-image" src="../images/cat_new.png" alt=" i n t e r e s t i n g emojis">
         </div>
 
       <h2><a href="../index.html"><b>BACK TO HOME</b></a></h2>
