--- a/html/meta.html
+++ b/html/meta.html
@@ -26,6 +26,7 @@
       </div>
       <div class="nav"><h2>META: TODAY'S HOROSCOPE</h2></div>
       <div class="flavor-text">“i can’t help it, i’m just a <b>N</b>iquil-ius <b>G</b>ermany <b>C</b>aprisun”</div>
+      <div class="flavor-text">what should michal do on his birthday in the age of aquarius?</div>
       <p></p>
 
       <!-- checking stuff -->
@@ -46,7 +47,7 @@
           <p><b>✧ 2392:</b> beware of omega-3 fatty acids today :0</p>
           <p><b>★ 7009:</b> run around, stay up til two am, yell out your window, bark at the lady walking her dog, do whatever! the hell ! ya want !!</p>
           <p><b>★ 5897:</b> you'll encounter anywhere from three to four deer today, don't hesitate to stare them all down.</p>
-          <p><b>✧ 4594:</b> look for cookies in the kitchen today. Make sure to eat at least six to seven cookies.</p>
+          <p><b>✧ 4594:</b> look for cookies in the kitchen today. make sure to eat at least six to seven cookies.</p>
           <p><b>✧ 2632:</b> you'll find the next one hit wonder on your discover weekly!</p>
           <p><b>★ 1952:</b> take twelve to fourteen seconds interval breaths. it's possible. </p>
           <p><b>★ 772:</b> avoid wearing red from the hours of five to six pm.</p>
