--- a/html/stir.html
+++ b/html/stir.html
@@ -41,7 +41,7 @@
       <!-- puzzle body -->
       <div class="puzzle">
         <p></p>
-          <img class="title-image" src="../images/stir.png" alt="a scathing review">
+          <img class="title-image" src="../images/stir_new.png" alt="a scathing review">
           <h4>WWHSM UWETO URGFH NATEA TIEOF ETRDC EFROR ONNCF EESLT YLOAD YMIOE</h4>
           <img class="title-image" src="../images/stir_map.png" alt="world map">
         </div>
