--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
   <head>
     <title>About</title>
     <link rel="stylesheet" href="../includes/main.css">
-    <link rel="icon" type="image/png" href="../images/kermit_crop.png">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
 
     <script>
       function tellSecret() {
@@ -22,34 +22,26 @@
       <!-- navigation -->
       <a id="top"></a>
       <div class="nav">
-        <h3><a href="../index.html">MICHAL'S MBDAY MAYHEM!</a></h3>
+        <h3><a href="../index.html">GALEXX BDAY BASH!</a></h3>
       </div>
-      <div class="nav"><h1>WELCOME</h1></div>
+      <div class="nav"><h1>ABOUT THE HUNT</h1></div>
       <div class="nav"><h3>This is not a puzzle.</h3></div>
 
       <!-- puzzle body -->
       <div class="puzzle">
-          <h2>🤏WAHOO HELL YA HAPPY BDAYYYYY 🐸🍊✨</h2>
-          <p> Happy birthday!
-            back at it again w a puzzle hunt! After we all experienced the MIT mystery hunt,
-            this one hopefully has more of that kind of vibe than that of a puzzled pint. Some new 
-            features of this hunt -- </p>
-          <p>1) there are a few more puzzles and that's because </p>
-          <p>2) THERE ARE MULTIPLE WRITERS WOOOOOOO </p>
-          <p>so expect a variety of styles when solving!!!
-            as always feel free to solve with F RI E N D S (aka catch me hopping on to solve
-            the galex puzzles) and we'll see if I figure out an answer checker this time :0000 </p>
-          <p>EDIT: FUCK YEAH I THINK I GOT THE ANSWER CHECKERS TO WORK HELLL YAHHHHH THEY'RE NOT SPACE OR CASE SENSITIVE EITHER 
-            GO CRAZY GO STOOPID AHHHHHHHH
-          </p>
-          <p>Whew! Hope this week hasn't been too packed for you, and feel free to do these whenever
-            and hopefully they'll be a fun experience :)
-          </p>
+          <h2>HAPPY BIRTHDAY!</h2>
+          <p> Happy birthday!!!! Back at it again with the puzzles :) I tried to make these more fun than before, 
+            the most one can when running perpetually on two dwindling braincells,,</p>
+          <p>We’re going on with another multi-author puzzle hunt! The colors on the homepage links should indicate the author of each puzzle. </p>
+          <p>Answer checker should work, let me know if there are issues! There MIGHT be a BiG update headed your way by the end of the year,,,, big maybe maybe :0</p>
+          <p>Enjoy!!! Feel free to reach out with any questions!!!!!! Happy solving and happy bday — Hope you’ve been resting well this break, and that you enjoy today ! 🎂🎉💗</p>
+          
           <p><b>Links:</b></p>
-          <p><a href="https://drive.google.com/file/d/1YW5P9WDEJbAJTi7N4n_b1zoOnhYmTZku/view?usp=sharing" target="_blank"><b>
-            ◆ pdf version of the puzzles</b> (successfully uploaded!)</a></p>
+          <!-- <p><a href="https://drive.google.com/file/d/1YW5P9WDEJbAJTi7N4n_b1zoOnhYmTZku/view?usp=sharing" target="_blank"><b>
+            ★ pdf version of the puzzles</b> (successfully uploaded!)</a></p> -->
+          <p>★ pdf version coming soon!</p>
           <p><a href="http://www.puzzledpint.com/files/2415/7835/9513/CodeSheet-201912.pdf" target="_blank"> <b>
-            ◆ This code sheet might help!</b></a></p>
+            ★ This code sheet might help!</b></a></p>
             
           <h2><a href="../index.html"><b>BACK TO HOME</b></a></h2></div>
     </div>
