--- a/html/meta.html
+++ b/html/meta.html
@@ -4,7 +4,7 @@
   <head>
     <title>META: Today's Horoscope</title>
     <link rel="stylesheet" href="../includes/main.css">
-    <link rel="icon" type="image/png" href="../images/kermit_crop.png">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
 
     <script>
       function tellSecret() {
