--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <title>Michal's Mbirthday Mayhem!</title>
+    <title>Galexx Bday Hunt 2021!</title>
     <link rel="stylesheet" href="includes/main.css">
-    <link rel="icon" type="image/png" href="images/kermit_crop.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 
     <script>
       function tellSecret() {
@@ -23,21 +23,17 @@
       <!-- navigation -->
       <a id="top"></a>
       <div class="nav">
-        <h1>MICHAL'S MBDAY MAYHEM!</h1>
+        <h1>GALEXX BDAY BASH!</h1>
       </div>
 
       <!-- links to puzzles -->
         <div class="puzzle">
-          <h4>Back at it again with some BIrThDaY FeStiViTIes!!!!!!!</h4>
+          <h4>IT'S THAT SEASON, THE SEASON FOR PUZZLES AND FESTIVITIES!</h4>
           <img class="title-image" src="images/bday.png" alt="celebration!!!!">
           <p><a href="html/about.html">About Page!</a></P>
-          <h3><a href = "html/dream.html">★ I Saw Her in a Dream</a></h3>
-          <h3><a href = "html/stir.html">✧ Stirred, Not Shaken</a></h3>
-          <h3><a href = "html/rhizome.html">★ Nursery Rhizomes</a></h3>
-          <h3><a href = "html/cat.html">✧ Cat Got Your Tongue?</a></h3>
-          <h3><a href = "html/sleep.html">★ Sleep on the Floor</a></h3>
-          <h3><a href = "html/walk.html">✧ Take a Walk</a></h3>
-          <h3><a href = "html/meta.html">META: Today's Horoscope</a></h3>
+          <h3><a href = "html/naur.html">★ Naur What?</a></h3>
+          <h3><a href = "html/lace.html">★ The Lacemakers</a></h3>
+          <h3><a href = "html/read.html">★ Boys Who Read 👋</a></h3>
          <!-- <h3><a href="#top"><b>BACK TO TOP</b></a></h3> -->
         </div>
     </div>
