--- a/html/naur.html
+++ b/html/naur.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <title>Take a Walk</title>
+    <title>Naur What?</title>
     <link rel="stylesheet" href="../includes/main.css">
-    <link rel="icon" type="image/png" href="../images/kermit_crop.png">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
     
     <script>
       function tellSecret() {
@@ -22,16 +22,14 @@
       <!-- navigation -->
       <a id="top"></a>
       <div class="nav">
-        <h3><a href="../index.html">MICHAL'S MBDAY MAYHEM!</a></h3>
+        <h3><a href="../index.html">GALEXX BDAY BASH!</a></h3>
       </div>
-      <div class="nav"><h2>TAKE A WALK</h2></div>
-      <div class="flavor-text">Michal’s bean cells are in a state where they can’t take another moment 
-        of strenuous thought, so he decides to go for a walk.</div>
+      <div class="nav"><h2>NAUR WHAT?</h2></div>
 
       <!-- checking stuff -->
       <p></p>
       <script> 
-        const puzzle = "walk" 
+        const puzzle = "naur" 
       </script>
       <input type="text" id="textBox" value="check your answer!">
       <button onclick="check(puzzle)">check!</button>
@@ -41,11 +39,12 @@
 
       <!-- puzzle body -->
       <div class="puzzle">
-          <img class="title-image" src="../images/walk_grid.png" alt="interesting grid">
-          <p></p>
-          <img class="title-image" src="../images/walk.png" alt="various flora">
+          <img class="puz-image" src="../images/naur_what_A.png" alt="various drawings, part A">
+          <img class="puz-image" src="../images/naur_what_B.png" alt="various drawings, part B">
         </div>
-       <h2><a href="../index.html"><b>BACK TO HOME</b></a></h2>
+
+      <h2><a href="../index.html"><b>BACK TO HOME</b></a></h2>
+
     </div>
 
     <p id="secret-message" onclick="tellSecret()">click on me!</p>
